@@ -166,73 +166,6 @@ public class TypeResolver extends Visitor
         return null;
     }
 
-    public Void visit(AddressNode node) {
-        super.visit(node);
-        try {
-            Type base = node.expr().type();
-            if (! node.expr().isLoadable()) {
-                // node.expr.type is already pointer.
-                node.setType(base);
-            }
-            else {
-                node.setType(typeTable.pointerTo(base));
-            }
-        }
-        catch (SemanticError err) {
-            Type t = typeTable.pointerTo(typeTable.voidType());
-            node.setType(t);
-        }
-        return null;
-    }
-
-    public Void visit(DereferenceNode node) {
-        super.visit(node);
-        handleImplicitAddress(node);
-        return null;
-    }
-
-    public Void visit(MemberNode node) {
-        super.visit(node);
-        handleImplicitAddress(node);
-        return null;
-    }
-
-    public Void visit(PtrMemberNode node) {
-        super.visit(node);
-        handleImplicitAddress(node);
-        return null;
-    }
-
-    public Void visit(ArefNode node) {
-        super.visit(node);
-        handleImplicitAddress(node);
-        return null;
-    }
-
-    public Void visit(VariableNode node) {
-        super.visit(node);
-        handleImplicitAddress(node);
-        return null;
-    }
-
-    private void handleImplicitAddress(LHSNode node) {
-        try {
-            if (! node.isLoadable()) {
-                Type t = node.type();
-                if (t.isArray()) {
-                    // int[4] ary; ary; should generate int*
-                    node.setType(typeTable.pointerTo(t.baseType()));
-                }
-                else {
-                    node.setType(typeTable.pointerTo(t));
-                }
-            }
-        }
-        catch (SemanticError err) {
-            // #isLoadable may cause SemanticError, ignore it
-        }
-    }
-
     public Void visit(CastNode node) {
         bindType(node.typeNode());
         super.visit(node);
